--- a/client/src/features/BuyTicket/ui/StepUserData.module.scss
+++ b/client/src/features/BuyTicket/ui/StepUserData.module.scss
@@ -33,6 +33,11 @@
   background: #fff;
   color: #222;
   transition: border 0.15s;
+
+  &:focus {
+    border-color: #1d4ed8;
+    box-shadow: 0 1px 8px #2563eb22;
+  }
 }
 .inputError {
   border-color: #e74c3c;
@@ -47,6 +52,7 @@
 .error {
   color: #e74c3c;
   font-size: 13px;
+  margin-top: 2px;
 }
 .nextButton {
   padding: 12px 0;
