--- a/client/src/entities/Event/ui/EventCard.module.scss
+++ b/client/src/entities/Event/ui/EventCard.module.scss
@@ -266,6 +266,21 @@
       height: 14px;
     }
   }
+
+  &[style*="font-weight: 700"] {
+    background-color: #fff1f1;
+    color: #dc3545;
+    border-color: #ffd6d6;
+
+    &:hover {
+      background-color: #ffe4e4;
+      border-color: #dc3545;
+    }
+
+    &::before {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23dc3545'%3E%3Cpath d='M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z'/%3E%3C/svg%3E");
+    }
+  }
 }
 
 .buyButton {
