--- a/client/src/features/MobileMenu/ui/MobileMenu.module.scss
+++ b/client/src/features/MobileMenu/ui/MobileMenu.module.scss
@@ -4,8 +4,7 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: auto;
-  max-height: 90vh;
+  height: 100vh;
   background: white;
   z-index: 1000;
   padding: 1rem;
@@ -19,6 +18,7 @@
 
   &.active {
     transform: translateX(0);
+    transition: transform 0.3s ease-in-out;
   }
 }
 
